# discpp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
inc/: dis.hpp  gateway.hpp  http.hpp  http_impl.hpp  priority_queue.hpp  queue.hpp  ws.hpp
include/core/: dis.hpp  queue.hpp
include/net/: http.hpp  http_impl.hpp  ws_impl.hpp
include/rest/: channel.hpp  rest.hpp
src/: .gitignore  dis.cpp  dis.hpp  gateway.cpp  http.cpp  main.cpp  ws.cpp
src/core/: dis.cpp  gateway.cpp  ws.cpp
src/net/: http.cpp
src/rest/: channel.cpp
